# Quantized-Spiking-Neural-Networks

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/snnhar/: cli.py  config.py  data_ucihar.py  encodings.py  experiments.py  models_ann.py  models_snn.py  plots.py  quantization.py  train.py
tests/: test_encodings.py  test_shapes.py
