[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snnhar"
version = "0.1.0"
description = "SNN HAR pipeline with Norse LIF and quantization experiments"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
